# doora

./: .gitignore  BLOOM_STATISTICS_TESTS.md  Cargo.toml  QUERY_GUIDE.md  README.md  criterion.toml
.github/workflows/: release.yml
benches/: search_benchmarks.rs
src/: bloom.rs  extractor.rs  index.rs  indexer.rs  lib.rs  main.rs  memory.rs  output.rs  parser.rs  query.rs  rewrite.rs  sieve.rs  trigram.rs  tui.rs  types.rs  walker.rs
tests/: bloom_statistics.rs  integration_test.rs
