[package]
name = "ast-search"
version = "0.1.0"
edition = "2021"

[dependencies]
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-python = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-go = "0.21"
tree-sitter-c = "0.21"
tree-sitter-cpp = "0.21"
rayon = "1.10"
ignore = "0.4"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
thiserror = "1"
regex = "1"

[dev-dependencies]
tempfile = "3"
