[package]
name = "dora"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = 1

[[bin]]
name = "dora"
path = "src/main.rs"

[dependencies]
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-python = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-go = "0.21"
tree-sitter-c = "0.21"
tree-sitter-cpp = "0.21"
rayon = "1.10"
ignore = "0.4"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
thiserror = "1"
regex = "1"
memmap2 = "0.9"
bincode = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }

ratatui    = "0.27"
crossterm  = { version = "0.27", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
scopeguard = "1"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "search_benchmarks"
harness = false
