[package]
name = "doora"
version = "0.1.2"
edition = "2021"
description = "Doora parses source files into syntax trees and runs S-expression queries to find functions, types, and call sites that grep misses. Supports Rust, Python, JS, TS, Go, C, and C++. Exposes an MCP server so AI agents understand your codebase semantically, cutting hallucinations and wasted context tokens."
authors = ["backpack-lab"]
license = "MIT"
repository = "https://github.com/backpack-lab/doora"
homepage = "https://github.com/backpack-lab/doora"
keywords = ["rust", "cli", "tree-sitter", "mcp", "ast", "code-search", "developer-tools", "query-engine", "rayon", "llm", "ai-coding", "grep-alternative", "structural-search"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
exclude = [
	"tests/fixtures/",
	"benches/",
	"scripts/",
	"docs/",
	".github/",
]

[profile.release]
debug = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[[bin]]
name = "doora"
path = "src/main.rs"

[dependencies]
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-python = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-go = "0.21"
tree-sitter-c = "0.21"
tree-sitter-cpp = "0.21"
rayon = "1.10"
ignore = "0.4"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
thiserror = "1"
regex = "1"
memmap2 = "0.9"
bincode = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde_json = "1"

ratatui    = "0.27"
crossterm  = { version = "0.27", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
scopeguard = "1"
similar = "2"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "search_benchmarks"
harness = false

[workspace.metadata.dist]
cargo-dist-version = "0.22.0"
ci = ["github"]
installers = ["shell", "powershell"]
targets = [
	"x86_64-unknown-linux-gnu",
	"aarch64-unknown-linux-gnu",
	"x86_64-apple-darwin",
	"aarch64-apple-darwin",
	"x86_64-pc-windows-msvc",
]
install-path = "CARGO_HOME"
publish-jobs = ["cargo"]

